<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:theme="@style/AppTheme">

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/firstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/firstName"
        android:nextFocusUp="@id/firstName"
        android:nextFocusLeft="@id/firstName"
        app:met_floatingLabelTextColor="@color/colorAccent"
        app:met_floatingLabel="highlight"/>

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/lastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/lastName"
        android:nextFocusUp="@id/lastName"
        android:nextFocusLeft="@id/lastName"
        app:met_floatingLabelTextColor="@color/colorAccent"
        app:met_floatingLabel="highlight"/>

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login"
        app:met_floatingLabel="highlight"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="3dp"
            android:textSize="16sp"
            android:text="@string/userType"/>

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/typesUsers"/>

    </LinearLayout>

    <Button
        android:id="@+id/addUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="#fd3d01"
        android:textColor="#fff"
        android:text="@string/add"/>
</LinearLayout>